tests/baselines/reference/overrideDynamicName1(noimplicitoverride=true).errors.txt
overrideDynamicName1.ts(8,12): error TS4127: This member cannot have an 'override' modifier because its name is dynamic.
overrideDynamicName1.ts(22,12): error TS4127: This member cannot have an 'override' modifier because its name is dynamic.


==== overrideDynamicName1.ts (2 errors) ====
    let prop = "foo"
    
    class Base1 {
      [prop]() {}
    }
    
    class Derived1 extends Base1 {
      override [prop]() {}
               ~~~~~~
!!! error TS4127: This member cannot have an 'override' modifier because its name is dynamic.
    }
    
    class Base2 {
      [prop]() {}
    }
    
    class Derived2 extends Base2 {
      [prop]() {}
    }
    
    class Base3 {}
    
    class Derived3 extends Base3 {
      override [prop]() {}
               ~~~~~~
!!! error TS4127: This member cannot have an 'override' modifier because its name is dynamic.
    }
    